--- a/package.json
+++ b/package.json
@@ -21,6 +21,13 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/service-worker": "^18.2.0",
+    "@ngneat/effects": "^2.1.2",
+    "@ngneat/effects-ng": "^3.1.4",
+    "@ngneat/elf": "^2.5.1",
+    "@ngneat/elf-devtools": "^1.3.0",
+    "@ngneat/elf-persist-state": "^1.2.1",
+    "@ngneat/elf-requests": "^1.9.2",
+    "dexie": "^4.0.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
